--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,30 @@ body{
 
 }
 
+#modal_wrapper{
+
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0,.2);
+  z-index: 150;
+  
+}
+
+#modal_content{
+
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  z-index: 160;
+  width: 40vw;
+  background-color: white;
+
+}
+
 #cohort_nav{
 
 }
